adiciona entidade Log
