# Docs/openapi-3.1.yml
@@ -77,7 +77,7 @@ paths:
             required: true
             schema:
               type: string
-        - name: enfermeiro_id
+        - name: atendente_id
             in: path
             description: 'Codigo do funcionario que cadastrou o paciente'
             required: true
@@ -196,7 +196,7 @@ paths:
             required: true
             schema:
               type: string
-        - name: enfermeiro_id
+        - name: atendente_id
             in: path
             description: 'Codigo do funcionario que cadastrou o paciente'
             required: true
@@ -670,7 +670,7 @@ paths:
     post:
       summary: 
 
-  /enfermeiro/{enfermeiro_id}:
+  /enfermeiro/{atendente_id}:
     get:
       summary: 'Retorna o enfermeiro referente ao ID solicitado'
       operationId: 'getEnfermeiroById'
@@ -1401,7 +1401,7 @@ components:
         - created_on
         - updated_on
         - dados
-        - enfermeiro_id  
+        - atendente_id  
       properties:
         Nome:
           type: string
